secondfile/objects/DHStatus_Z_End_Demarc__c.object
<CustomObject>
    <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Providers-DHStatus-Z End Demarc</description>
    <fields>
        <fullName>ATT_Demarc_Location__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Verizn Provider-Z end Demarc-ATT Demarc Location</description>
        <label>ATT Demarc Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Verizon_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Verizon Providers-DHStatus-Z End Demarc-DHStatus_Verizon_Provider</description>
        <label>DHStatus-Verizon Provider</label>
        <referenceTo>DHStatus_Verizon_Provider__c</referenceTo>
        <relationshipLabel>DHStatus-Z End Demarc</relationshipLabel>
        <relationshipName>DHStatus_Z_End_Demarc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extended_Wire_Indicator__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Verizn Provider-Z end Demarc-Extended Wire Indicator</description>
        <label>Extended Wire Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Type__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Verizn Provider-Z end Demarc-Jack Type</description>
        <label>Jack Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Demarc_Label__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Verizn Provider-Z End Demarc-Provider Demarc Label</description>
        <label>Provider Demarc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Z End Demarc</label>
    <nameField>
        <displayFormat>ZED-{00000}</displayFormat>
        <label>Z End Demarc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Z End Demarc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>